Fixed the weird receiving issue, got it working like I originally intended. Idk why I couldn't get it working before. Receving is even faster now and doesn't reinitialize every time.

--- a/UDP_Test_GUI/Setup.resx
+++ b/UDP_Test_GUI/Setup.resx
@@ -126,6 +126,11 @@
   <metadata name="descriptionColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Please select a Network Interface Card to use for listening on this system. 
+Please also input the Prometheus (metrics) and Loki (logging) endpoints 
+you wish to use. These settings can be changed later if needed.</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
